# skycmd

./: README.md  pyproject.toml  requirements.txt
skycmd/: main.py
skycmd/weather/: service.py
