[project]
name = "skycmd"
version = "0.1.0"
description = "A command-line tool to get weather information"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.30.0",
    "click>=8.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
skycmd = "skycmd.main:main"